@startuml

class UserEntry {
    UUID id
    String name
}

entity Meeting {
    UUID id
    String title
    UserEntry author
    List<LocalDateTime> availableTime
    List<Vote> votes
}

entity Vote {
    UUID id
    LocalDateTime time
    UserEntry user
}

Meeting --> UserEntry
Vote --> UserEntry
Meeting --> Vote

@enduml